cabal-version:      1.12
name:               text-iso8601
version:            0.1.1
synopsis:           Converting time to and from ISO 8601 text.
description:
  Converting time to and from IS0 8601 text.
  Specifically the [RFC3339](https://datatracker.ietf.org/doc/html/rfc3339) profile.

license:            BSD3
license-file:       LICENSE
category:           Parsing
copyright:          Oleg Grenrus <oleg.grenrus@iki.fi>
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:
  Oleg Grenrus <oleg.grenrus@iki.fi>

homepage:           https://github.com/haskell/aeson
bug-reports:        https://github.com/haskell/aeson/issues
build-type:         Simple
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

extra-source-files: changelog.md

source-repository head
  type:     git
  location: git://github.com/haskell/aeson.git
  subdir:   text-iso8601

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    Data.Time.FromText
    Data.Time.ToText

  build-depends:
      base                >=4.12.0.0 && <5
    , integer-conversion  >=0.1      && <0.2
    , text                >=1.2.3.0  && <1.3.0.0 || >=2.0 && <2.2
    , time                >=1.8.0.2  && <1.13
    , time-compat         >=1.9.4    && <1.10

test-suite text-iso8601-tests
  default-language: Haskell2010
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  main-is:          text-iso8601-tests.hs
  ghc-options:      -Wall
  build-depends:
      base
    , text
    , text-iso8601
    , time-compat

  -- test dependencies
  build-depends:
      QuickCheck            >=2.14.3   && <2.16
    , quickcheck-instances  >=0.3.29.1 && <0.4
    , tasty                 >=1.4.3    && <1.6
    , tasty-hunit           >=0.10.0.3 && <0.11
    , tasty-quickcheck      >=0.10.2   && <0.11

benchmark text-iso8601-bench
  default-language: Haskell2010
  hs-source-dirs:   bench
  type:             exitcode-stdio-1.0
  main-is:          text-iso8601-bench.hs
  ghc-options:      -Wall
  build-depends:
      base
    , text
    , text-iso8601
    , time-compat

  -- bench dependencies
  build-depends:
      attoparsec          >=0.14.4  && <0.15
    , attoparsec-iso8601  >=1.1.0.1 && <1.2
    , tasty-bench         >=0.3.4   && <0.4
